# advent-of-corrode

./: Cargo.toml  README.md
assets/: index.html  script.js
backend/: Cargo.toml
backend/migrations/session_cookies/: up.sql
backend/src/: lib.rs  main.rs  models.rs  schema.rs  utils.rs
backend/src/endpoints/: mod.rs  session.rs  solution.rs
backend/src/solutions/: mod.rs
backend/src/solutions/year_2024/: day_1.rs  day_2.rs  mod.rs
frontend/: Cargo.toml
frontend/src/: main.rs
migrations/session_cookies/: down.sql
src/: lib.rs  main.rs  models.rs
src/endpoints/: mod.rs  root.rs  submission.rs
src/solutions/: mod.rs
src/solutions/year_2024/: day_1.rs  mod.rs
types/src/: lib.rs
