[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
diesel = { version = "2.2.9", features = ["postgres"] }
dotenvy = "0.15.7"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
