[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
diesel = { version = "2.2.9", features = ["postgres"] }
dotenvy = "0.15.7"
indoc = "2.0.6"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
